@@ -96,6 +96,7 @@ version_sources= \
 	common.h system.h bftypes.h \
 	globals.h globals.c \
 	base64.h base64.c \
+	bf_exit.c \
 	bogoconfig.h bogoconfig.c \
 	bogomain.h bogomain.c \
 	bogoreader.h bogoreader.c \
